<!--Aryan Sood-->
<!--N01393003-->
<!--CENG 258 RNA-->
<resources>
    <string name="app_name">Aryan Sood N01393003 </string>
    <string name="home_string">Home</string>
    <string name="draw">Draw</string>
    <string name="call">Call</string>
    <string name="animate">Animate</string>
    <string name="enter_password">Enter Password</string>
    <string name="assignment_3"><strike> Assignment 3 </strike> </string>
    <string name="contact_number">1234567890</string>
    <string name="pg">Permission Granted</string>
    <string name="pd">Permission Denied</string>
    <string name="sood">Sood</string>
    <string name="Aryan">Aryan</string>
    <string name="Description">Rotation of Mercury Around Sun</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="inputted_data">Inputted Data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="extemsg">Are you sure you want to exit?</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="gray">Grey</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="_4">4</string>
    <string name="changes">Click Update to appply changes</string>
    <string-array name="size">
        <item>@string/_1</item>
        <item>@string/_2</item>
        <item>@string/_3</item>
        <item>@string/_4</item>
    </string-array>
    <string-array name="color">
        <item>Black</item>
        <item>Blue</item>
        <item>Gray</item>
        <item>Red</item>
    </string-array>
</resources>