<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimateFragment">


    <TextView
        android:id="@+id/Aryan_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-45"
        android:text="@string/Aryan"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050" />

    <TextView
        android:id="@+id/Aryan_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="45"
        android:text="@string/sood"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.040" />

    <TextView
        android:id="@+id/Aryan_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/Aryan_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/Aryan_Stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Aryan_Start"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Aryan_Galaxy"
        android:layout_width="621dp"
        android:layout_height="549dp"
        android:layout_marginTop="210dp"
        android:src="@drawable/galaxy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Aryan_sun"
        android:layout_width="427dp"
        android:layout_height="451dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Aryan_Merc"
        android:layout_width="58dp"
        android:layout_height="42dp"
        android:src="@drawable/mercury"
        app:layout_constraintBottom_toBottomOf="@+id/Aryan_Galaxy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Aryan_Stop"
        app:layout_constraintVertical_bias="0.371" />

</androidx.constraintlayout.widget.ConstraintLayout>