<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:background="@color/cream"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawFragment">


    <aryan.sood.n01393003.a3.CanvasView
        android:id="@+id/signature_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />

    <Button
        android:id="@+id/aryan_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/Aryan_update"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Spinner
        android:id="@+id/Aryan_size"
        android:layout_width="197dp"
        android:layout_height="42dp"
        android:entries="@array/size"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Spinner
        android:id="@+id/nAryan_color"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:entries="@array/color"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/signature_canvas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <ImageView
        android:id="@+id/Aryan_imageView"
        android:layout_width="140dp"
        android:layout_height="93dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="121dp"
        android:src="@drawable/img4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Aryan_imageView2"
        android:layout_width="27dp"
        android:layout_height="17dp"
        android:layout_marginStart="92dp"
        android:src="@drawable/img4"
        app:layout_constraintBottom_toTopOf="@+id/Aryan_imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/Aryan_imageView4"
        android:layout_width="25dp"
        android:layout_height="17dp"
        android:layout_marginEnd="132dp"
        android:src="@drawable/img4"
        app:layout_constraintBottom_toTopOf="@+id/Aryan_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Aryan_imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="80dp"
        android:text="@string/changes"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nAryan_color" />

</androidx.constraintlayout.widget.ConstraintLayout>